# casper

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vcsws.config  vcsws.py
core/: __init__.py  client.py  logging.py  pwnat.py  server.py
example/.topy/: .topyignore  manifest.toml
example/.vcsws/: manifest.toml
src/: cli.py  client.py  logger.py  server.py  topy_core.py  utils.py  vcsws_core.py
tests/example/: waste
tests/example/.vcsws/: .vcswsignore  manifest.toml
tests/example/.vcsws/branches/test/: a
