[tool.poetry]
name = "vcsws"
version = "0.1.0"
description = "Version Control System Using WebSockets"
authors = ["Maksim Shushkevich <meshushkevich@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
tqdm = "^4.66.4"
public-ip = "^0.12"
ipaddr = "^2.2.0"
bitstring = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
